# dipole-oracle

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
examples/electric-meter-data-shower/: README.md
examples/electric-meter-data-shower/src/: App.js  OracleData.js
examples/electric-meter-data-shower/src/config/: development.json
examples/electric-meter-data-shower/src/substrate-lib/components/: DeveloperConsole.js  TxButton.js
examples/electric-meter-hardware-connector/: config.js  index.js  type.js
examples/nodejs/: index.js  package.json  type.js
node/: Cargo.toml
pallets/collector/: Cargo.toml
pallets/collector/src/: lib.rs  mock.rs  tests.rs
pallets/goods_oracle/: Cargo.toml
pallets/goods_oracle/src/: lib.rs  mock.rs  tests.rs
pallets/operator/: Cargo.toml
pallets/operator/src/: lib.rs  mock.rs  tests.rs
pallets/pay_oracle/: Cargo.toml
pallets/pay_oracle/src/: lib.rs  mock.rs  tests.rs
pallets/support/: Cargo.toml
pallets/support/src/: lib.rs
pallets/utilities/: Cargo.toml
pallets/utilities/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: dipole-oracle.json  docker_run.sh
