[package]
authors = ['dipole developers']
build = 'build.rs'
description = 'dipole oracle node'
edition = '2018'
homepage = 'https://www.dipole.tech/'
license = 'Unlicense'
name = 'dipole-oracle'
repository = 'https://github.com/DipoleTech/dipole-oracle/'
version = '2.0.0-rc2'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
futures = '0.3.4'
log = '0.4.8'
parking_lot = '0.10.0'
structopt = '0.3.8'
node-template-runtime = { package = 'dipole-oracle-runtime', version = '2.0.0-rc2', path = '../runtime' }

# substrate
sc-basic-authorship = { version = '0.8.0-alpha.8', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2' }
sc-cli = { version = '0.8.0-alpha.8', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2' }
sc-client-api = { version = '2.0.0-alpha.8', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2' }
sc-consensus = { version = '0.8.0-alpha.8', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2' }
sc-consensus-aura = { version = '0.8.0-alpha.8', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2' }
sc-executor = { version = '0.8.0-alpha.8', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2' }
sc-finality-grandpa = { version = '0.8.0-alpha.8', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2' }
sc-network = { version = '0.8.0-alpha.8', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2' }
sc-service = { version = '0.8.0-alpha.8', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2' }
sc-transaction-pool = { version = '2.0.0-alpha.8', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2' }
sp-consensus = { version = '0.8.0-alpha.8', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2' }
sp-consensus-aura = { version = '0.8.0-alpha.8', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2' }
sp-core = { version = '2.0.0-alpha.8', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2'}
sp-finality-grandpa = { version = '2.0.0-alpha.8', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2' }
sp-inherents = { version = '2.0.0-alpha.8', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2' }
sp-runtime = { version = '2.0.0-alpha.8', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2' }
sp-transaction-pool = { version = '2.0.0-alpha.8', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2' }

[build-dependencies]
substrate-build-script-utils = { version = '2.0.0-rc2', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2' }

[[bin]]
name = 'dipole-oracle'
