[package]
authors = ['Dipole Developers']
description = 'operator'
edition = '2018'
homepage = 'https://www.dipole.tech/'
license = 'Unlicense'
name = 'operator'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
#substrate
frame-support = { version = '2.0.0-rc2', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2', default-features = false }
system = { package = 'frame-system', version = '2.0.0-rc2', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2', default-features = false  }
sp-runtime = { version = '2.0.0-rc2', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2', default-features = false  }
sp-std = { version = '2.0.0-rc2', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2', default-features = false  }
sp-io = { version = '2.0.0-rc2', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2', default-features = false  }
sp-core = { version = '2.0.0-rc2', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2', default-features = false  }
codec = { package = 'parity-scale-codec', features = ['derive'], version = '1.3.0', default-features = false }
randomness = { package = 'pallet-randomness-collective-flip', version = '2.0.0-rc2', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2', default-features = false }

support = { path = '../support', default-features = false }

[features]
default = ['std']
std = [
    'frame-support/std',
	'system/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-io/std',
	'codec/std',
	'randomness/std',
	'support/std',
]


